# Breast-Cancer-Predictor-UnstructuredDataset

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: dataset_strategy.md  report_alignment.md
scripts/: predict_image.py  prepare_idc_dataset.py  train_image_model.py  train_wisconsin_baseline.py
src/bc_predictor/: __init__.py  config.py  data.py  image_model.py  metrics.py  tabular_model.py
tests/: test_data.py
