[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breast-cancer-unstructured-ai"
version = "0.1.0"
description = "Breast cancer prediction using a Wisconsin baseline and IDC histopathology image classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "Pillow>=10.0",
  "tqdm>=4.66",
  "torch>=2.0",
  "torchvision>=0.15",
  "streamlit>=1.30",
]

[tool.setuptools.packages.find]
where = ["src"]

